Opened 10 years ago

Closed 10 years ago

#10053 closed bug (fixed)

StyledEdit: the find panel is modal, and doesn't allow to interact with the document

Reported by: Giova84 Owned by: siarzhuk
Priority: normal Milestone: R1
Component: Applications/StyledEdit Version: R1/Development
Keywords: StyledEdit find panel focus modal Cc:
Blocked By: Blocking:
Platform: x86

Description

hrev46154 I have noticed that the "find panel" in StyledEdit is modal, and doesn't allow to interact with the document (eg to copy text). This is limiting, because if i open the find panel, to search and replace, i cannot, eg, copy another term inside the field "replace with", since this panel is modal. Look at the screenshot.

Attachments (4)

Change History (7)

by Giova84, 10 years ago

Attachment: StyledEdit_FindModal.png added

comment:1 by siarzhuk, 10 years ago

Owner: changed from korli to siarzhuk
Status: newassigned

Published as GCI 2013 task.

comment:2 by Ezodev, 10 years ago

patch: 01

comment:3 by siarzhuk, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev46520 during GCI 2013. Thanks!

Note: See TracTickets for help on using tickets.