StyleEdit: non-modal Find/Replace windows implementation

* Switch to non-modal floating windows for Find/Replace dialogs,
  preserve parameters of the previous search in this editor session;
* Fixes #10053.

- GCI 2013