src/apps/stylededit/ReplaceWindow.h
@@ -6,8 +6,8 @@
  *		Mattias Sundblad
  *		Andrew Bachmann
  */
-#ifndef REPLACE_WINDOW_H 
-#define REPLACE_WINDOW_H 
+#ifndef REPLACE_WINDOW_H
+#define REPLACE_WINDOW_H
 
 
 #include <Window.h>
@@ -32,7 +32,7 @@ class ReplaceWindow : public BWindow {
 
 	private:
 		void 			_SendMessage(uint32 what);
-		void 			_ChangeUI();		
+		void 			_ChangeUI();
 
 		BTextControl	*fSearchString;
 		BTextControl	*fReplaceString;
